// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetailsPage tests Empty state 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      "/",
    ]
  }
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <TaskDetailsPage
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [MockFunction],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": false,
          "params": Object {
            "taskId": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
          },
          "path": "",
          "url": "",
        }
      }
    >
      <PageSection
        data-ouia-component-id="spinner"
        data-ouia-component-type="task-details-page-section"
        data-ouia-safe={true}
      >
        <section
          className="pf-c-page__main-section"
          data-ouia-component-id="spinner"
          data-ouia-component-type="task-details-page-section"
          data-ouia-safe={true}
        >
          <Grid
            className="kogito-task-console__full-size"
            hasGutter={true}
            md={1}
          >
            <div
              className="pf-l-grid pf-m-all-1-col-on-md pf-m-gutter kogito-task-console__full-size"
            >
              <GridItem
                className="kogito-task-console__full-size"
                span={12}
              >
                <div
                  className="pf-l-grid__item pf-m-12-col kogito-task-console__full-size"
                >
                  <Card
                    className="kogito-task-console__full-size"
                  >
                    <article
                      className="pf-c-card kogito-task-console__full-size"
                      data-ouia-component-id="OUIA-Generated-Card-1"
                      data-ouia-component-type="PF4/Card"
                      data-ouia-safe={true}
                      id=""
                    >
                      <Bullseye>
                        <div
                          className="pf-l-bullseye"
                        >
                          <KogitoSpinner
                            spinnerText="Loading details for task: 45a73767-5da3-49bf-9c40-d533c3e77ef3"
                          >
                            <EmptyState
                              data-ouia-component-type="kogito-spinner"
                              data-ouia-safe={true}
                            >
                              <div
                                className="pf-c-empty-state"
                                data-ouia-component-type="kogito-spinner"
                                data-ouia-safe={true}
                              >
                                <div
                                  className="pf-c-empty-state__content"
                                >
                                  <EmptyStateIcon
                                    component={[Function]}
                                    variant="container"
                                  >
                                    <div
                                      className="pf-c-empty-state__icon"
                                    >
                                      <Spinner>
                                        <span
                                          aria-valuetext="Loading..."
                                          className="pf-c-spinner pf-m-xl"
                                          role="progressbar"
                                        >
                                          <span
                                            className="pf-c-spinner__clipper"
                                          />
                                          <span
                                            className="pf-c-spinner__lead-ball"
                                          />
                                          <span
                                            className="pf-c-spinner__tail-ball"
                                          />
                                        </span>
                                      </Spinner>
                                    </div>
                                  </EmptyStateIcon>
                                  <Title
                                    headingLevel="h3"
                                    size="lg"
                                  >
                                    <h3
                                      className="pf-c-title pf-m-lg"
                                    >
                                      Loading details for task: 45a73767-5da3-49bf-9c40-d533c3e77ef3
                                    </h3>
                                  </Title>
                                </div>
                              </div>
                            </EmptyState>
                          </KogitoSpinner>
                        </div>
                      </Bullseye>
                    </article>
                  </Card>
                </div>
              </GridItem>
            </div>
          </Grid>
        </section>
      </PageSection>
    </TaskDetailsPage>
  </Router>
</MemoryRouter>
`;

exports[`TaskDetailsPage tests Error notification 1`] = `
<TaskDetailsPage
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": false,
      "params": Object {
        "taskId": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      },
      "path": "",
      "url": "",
    }
  }
>
  <PageSection
    data-ouia-component-id="header"
    data-ouia-component-type="task-details-page-section"
    data-ouia-safe={true}
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
      data-ouia-component-id="header"
      data-ouia-component-type="task-details-page-section"
      data-ouia-safe={true}
    >
      <Breadcrumb>
        <MockedComponent />
      </Breadcrumb>
      <Flex
        justifyContent={
          Object {
            "default": "justifyContentSpaceBetween",
          }
        }
      >
        <div
          className="pf-l-flex pf-m-justify-content-space-between"
        >
          <FlexItem>
            <div
              className=""
            >
              <PageTitle
                extra={
                  <TaskState
                    task={
                      Object {
                        "actualOwner": null,
                        "adminGroups": Array [],
                        "adminUsers": Array [],
                        "completed": null,
                        "description": null,
                        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "excludedUsers": Array [],
                        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                        "lastUpdate": 2020-02-19T11:11:56.282Z,
                        "name": "VisaApplication",
                        "outputs": "{}",
                        "potentialGroups": Array [],
                        "potentialUsers": Array [],
                        "priority": "1",
                        "processId": "travels",
                        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                        "referenceName": "Apply for visa",
                        "rootProcessId": null,
                        "rootProcessInstanceId": null,
                        "started": 2020-02-19T11:11:56.282Z,
                        "state": "Ready",
                      }
                    }
                    variant="label"
                  />
                }
                title="Apply for visa"
              >
                <MockedComponent />
              </PageTitle>
            </div>
          </FlexItem>
          <FlexItem>
            <div
              className=""
            >
              <Button
                id="view-details"
                onClick={[Function]}
                variant="secondary"
              >
                <MockedComponent />
              </Button>
            </div>
          </FlexItem>
        </div>
      </Flex>
      <div
        className="kogito-task-console__task-details-page"
      >
        <MockedFormNotification
          notification={
            Object {
              "close": [Function],
              "customAction": Object {
                "label": "Go to Task Inbox",
                "onClick": [Function],
              },
              "details": "Extra info!",
              "message": "Task 'Apply for visa' couldn't transition to phase 'complete'.",
              "type": "error",
            }
          }
        />
      </div>
    </section>
  </PageSection>
  <PageSection
    data-ouia-component-id="content"
    data-ouia-component-type="task-details-page-section"
    data-ouia-safe={true}
  >
    <section
      className="pf-c-page__main-section"
      data-ouia-component-id="content"
      data-ouia-component-type="task-details-page-section"
      data-ouia-safe={true}
    >
      <Drawer
        isExpanded={false}
      >
        <div
          className="pf-c-drawer"
        >
          <DrawerContent
            panelContent={
              <DrawerPanelContent
                className="kogito-task-console__full-size"
              >
                <DrawerHead>
                  <span
                    tabIndex={-1}
                  >
                    <Title
                      headingLevel="h3"
                      size="xl"
                    >
                      Details
                    </Title>
                  </span>
                  <DrawerActions>
                    <DrawerCloseButton
                      onClick={[Function]}
                    />
                  </DrawerActions>
                </DrawerHead>
                <DrawerPanelBody>
                  <EmbeddedTaskDetails
                    targetOrigin="http://localhost"
                    userTask={
                      Object {
                        "actualOwner": null,
                        "adminGroups": Array [],
                        "adminUsers": Array [],
                        "completed": null,
                        "description": null,
                        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "excludedUsers": Array [],
                        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                        "lastUpdate": 2020-02-19T11:11:56.282Z,
                        "name": "VisaApplication",
                        "outputs": "{}",
                        "potentialGroups": Array [],
                        "potentialUsers": Array [],
                        "priority": "1",
                        "processId": "travels",
                        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                        "referenceName": "Apply for visa",
                        "rootProcessId": null,
                        "rootProcessInstanceId": null,
                        "started": 2020-02-19T11:11:56.282Z,
                        "state": "Ready",
                      }
                    }
                  />
                </DrawerPanelBody>
              </DrawerPanelContent>
            }
          >
            <DrawerMain>
              <div
                className="pf-c-drawer__main"
              >
                <div
                  className="pf-c-drawer__content"
                >
                  <DrawerContentBody>
                    <div
                      className="pf-c-drawer__body"
                    >
                      <Grid
                        className="kogito-task-console__full-size"
                        hasGutter={true}
                        md={1}
                      >
                        <div
                          className="pf-l-grid pf-m-all-1-col-on-md pf-m-gutter kogito-task-console__full-size"
                        >
                          <GridItem
                            className="kogito-task-console__full-size"
                            span={12}
                          >
                            <div
                              className="pf-l-grid__item pf-m-12-col kogito-task-console__full-size"
                            >
                              <Card
                                className="kogito-task-console__full-size"
                              >
                                <article
                                  className="pf-c-card kogito-task-console__full-size"
                                  data-ouia-component-id="OUIA-Generated-Card-10"
                                  data-ouia-component-type="PF4/Card"
                                  data-ouia-safe={true}
                                  id=""
                                >
                                  <CardBody
                                    className="pf-u-h-100"
                                  >
                                    <div
                                      className="pf-c-card__body pf-u-h-100"
                                    >
                                      <MockedTaskFormContainer
                                        onSubmitError={[Function]}
                                        onSubmitSuccess={[Function]}
                                        userTask={
                                          Object {
                                            "actualOwner": null,
                                            "adminGroups": Array [],
                                            "adminUsers": Array [],
                                            "completed": null,
                                            "description": null,
                                            "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                                            "excludedUsers": Array [],
                                            "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                                            "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                                            "lastUpdate": 2020-02-19T11:11:56.282Z,
                                            "name": "VisaApplication",
                                            "outputs": "{}",
                                            "potentialGroups": Array [],
                                            "potentialUsers": Array [],
                                            "priority": "1",
                                            "processId": "travels",
                                            "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                                            "referenceName": "Apply for visa",
                                            "rootProcessId": null,
                                            "rootProcessInstanceId": null,
                                            "started": 2020-02-19T11:11:56.282Z,
                                            "state": "Ready",
                                          }
                                        }
                                      />
                                    </div>
                                  </CardBody>
                                </article>
                              </Card>
                            </div>
                          </GridItem>
                        </div>
                      </Grid>
                    </div>
                  </DrawerContentBody>
                </div>
                <DrawerPanelContent
                  className="kogito-task-console__full-size"
                >
                  <div
                    className="pf-c-drawer__panel kogito-task-console__full-size"
                    hidden={true}
                    onTransitionEnd={[Function]}
                  />
                </DrawerPanelContent>
              </div>
            </DrawerMain>
          </DrawerContent>
        </div>
      </Drawer>
    </section>
  </PageSection>
</TaskDetailsPage>
`;

exports[`TaskDetailsPage tests Error notification 2`] = `
<TaskDetailsPage
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": false,
      "params": Object {
        "taskId": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      },
      "path": "",
      "url": "",
    }
  }
>
  <PageSection
    data-ouia-component-id="header"
    data-ouia-component-type="task-details-page-section"
    data-ouia-safe={true}
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
      data-ouia-component-id="header"
      data-ouia-component-type="task-details-page-section"
      data-ouia-safe={true}
    >
      <Breadcrumb>
        <MockedComponent />
      </Breadcrumb>
      <Flex
        justifyContent={
          Object {
            "default": "justifyContentSpaceBetween",
          }
        }
      >
        <div
          className="pf-l-flex pf-m-justify-content-space-between"
        >
          <FlexItem>
            <div
              className=""
            >
              <PageTitle
                extra={
                  <TaskState
                    task={
                      Object {
                        "actualOwner": null,
                        "adminGroups": Array [],
                        "adminUsers": Array [],
                        "completed": null,
                        "description": null,
                        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "excludedUsers": Array [],
                        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                        "lastUpdate": 2020-02-19T11:11:56.282Z,
                        "name": "VisaApplication",
                        "outputs": "{}",
                        "potentialGroups": Array [],
                        "potentialUsers": Array [],
                        "priority": "1",
                        "processId": "travels",
                        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                        "referenceName": "Apply for visa",
                        "rootProcessId": null,
                        "rootProcessInstanceId": null,
                        "started": 2020-02-19T11:11:56.282Z,
                        "state": "Ready",
                      }
                    }
                    variant="label"
                  />
                }
                title="Apply for visa"
              >
                <MockedComponent />
              </PageTitle>
            </div>
          </FlexItem>
          <FlexItem>
            <div
              className=""
            >
              <Button
                id="view-details"
                onClick={[Function]}
                variant="secondary"
              >
                <MockedComponent />
              </Button>
            </div>
          </FlexItem>
        </div>
      </Flex>
    </section>
  </PageSection>
  <PageSection
    data-ouia-component-id="content"
    data-ouia-component-type="task-details-page-section"
    data-ouia-safe={true}
  >
    <section
      className="pf-c-page__main-section"
      data-ouia-component-id="content"
      data-ouia-component-type="task-details-page-section"
      data-ouia-safe={true}
    >
      <Drawer
        isExpanded={false}
      >
        <div
          className="pf-c-drawer"
        >
          <DrawerContent
            panelContent={
              <DrawerPanelContent
                className="kogito-task-console__full-size"
              >
                <DrawerHead>
                  <span
                    tabIndex={-1}
                  >
                    <Title
                      headingLevel="h3"
                      size="xl"
                    >
                      Details
                    </Title>
                  </span>
                  <DrawerActions>
                    <DrawerCloseButton
                      onClick={[Function]}
                    />
                  </DrawerActions>
                </DrawerHead>
                <DrawerPanelBody>
                  <EmbeddedTaskDetails
                    targetOrigin="http://localhost"
                    userTask={
                      Object {
                        "actualOwner": null,
                        "adminGroups": Array [],
                        "adminUsers": Array [],
                        "completed": null,
                        "description": null,
                        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "excludedUsers": Array [],
                        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                        "lastUpdate": 2020-02-19T11:11:56.282Z,
                        "name": "VisaApplication",
                        "outputs": "{}",
                        "potentialGroups": Array [],
                        "potentialUsers": Array [],
                        "priority": "1",
                        "processId": "travels",
                        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                        "referenceName": "Apply for visa",
                        "rootProcessId": null,
                        "rootProcessInstanceId": null,
                        "started": 2020-02-19T11:11:56.282Z,
                        "state": "Ready",
                      }
                    }
                  />
                </DrawerPanelBody>
              </DrawerPanelContent>
            }
          >
            <DrawerMain>
              <div
                className="pf-c-drawer__main"
              >
                <div
                  className="pf-c-drawer__content"
                >
                  <DrawerContentBody>
                    <div
                      className="pf-c-drawer__body"
                    >
                      <Grid
                        className="kogito-task-console__full-size"
                        hasGutter={true}
                        md={1}
                      >
                        <div
                          className="pf-l-grid pf-m-all-1-col-on-md pf-m-gutter kogito-task-console__full-size"
                        >
                          <GridItem
                            className="kogito-task-console__full-size"
                            span={12}
                          >
                            <div
                              className="pf-l-grid__item pf-m-12-col kogito-task-console__full-size"
                            >
                              <Card
                                className="kogito-task-console__full-size"
                              >
                                <article
                                  className="pf-c-card kogito-task-console__full-size"
                                  data-ouia-component-id="OUIA-Generated-Card-10"
                                  data-ouia-component-type="PF4/Card"
                                  data-ouia-safe={true}
                                  id=""
                                >
                                  <CardBody
                                    className="pf-u-h-100"
                                  >
                                    <div
                                      className="pf-c-card__body pf-u-h-100"
                                    >
                                      <MockedTaskFormContainer
                                        onSubmitError={[Function]}
                                        onSubmitSuccess={[Function]}
                                        userTask={
                                          Object {
                                            "actualOwner": null,
                                            "adminGroups": Array [],
                                            "adminUsers": Array [],
                                            "completed": null,
                                            "description": null,
                                            "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                                            "excludedUsers": Array [],
                                            "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                                            "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                                            "lastUpdate": 2020-02-19T11:11:56.282Z,
                                            "name": "VisaApplication",
                                            "outputs": "{}",
                                            "potentialGroups": Array [],
                                            "potentialUsers": Array [],
                                            "priority": "1",
                                            "processId": "travels",
                                            "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                                            "referenceName": "Apply for visa",
                                            "rootProcessId": null,
                                            "rootProcessInstanceId": null,
                                            "started": 2020-02-19T11:11:56.282Z,
                                            "state": "Ready",
                                          }
                                        }
                                      />
                                    </div>
                                  </CardBody>
                                </article>
                              </Card>
                            </div>
                          </GridItem>
                        </div>
                      </Grid>
                    </div>
                  </DrawerContentBody>
                </div>
                <DrawerPanelContent
                  className="kogito-task-console__full-size"
                >
                  <div
                    className="pf-c-drawer__panel kogito-task-console__full-size"
                    hidden={true}
                    onTransitionEnd={[Function]}
                  />
                </DrawerPanelContent>
              </div>
            </DrawerMain>
          </DrawerContent>
        </div>
      </Drawer>
    </section>
  </PageSection>
</TaskDetailsPage>
`;

exports[`TaskDetailsPage tests Error state 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      "/",
    ]
  }
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <TaskDetailsPage
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [MockFunction],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": false,
          "params": Object {
            "taskId": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
          },
          "path": "",
          "url": "",
        }
      }
    >
      <PageSection
        data-ouia-component-id="spinner"
        data-ouia-component-type="task-details-page-section"
        data-ouia-safe={true}
      >
        <section
          className="pf-c-page__main-section"
          data-ouia-component-id="spinner"
          data-ouia-component-type="task-details-page-section"
          data-ouia-safe={true}
        >
          <Grid
            className="kogito-task-console__full-size"
            hasGutter={true}
            md={1}
          >
            <div
              className="pf-l-grid pf-m-all-1-col-on-md pf-m-gutter kogito-task-console__full-size"
            >
              <GridItem
                className="kogito-task-console__full-size"
                span={12}
              >
                <div
                  className="pf-l-grid__item pf-m-12-col kogito-task-console__full-size"
                >
                  <Card
                    className="kogito-task-console__full-size"
                  >
                    <article
                      className="pf-c-card kogito-task-console__full-size"
                      data-ouia-component-id="OUIA-Generated-Card-2"
                      data-ouia-component-type="PF4/Card"
                      data-ouia-safe={true}
                      id=""
                    >
                      <Bullseye>
                        <div
                          className="pf-l-bullseye"
                        >
                          <KogitoSpinner
                            spinnerText="Loading details for task: 45a73767-5da3-49bf-9c40-d533c3e77ef3"
                          >
                            <EmptyState
                              data-ouia-component-type="kogito-spinner"
                              data-ouia-safe={true}
                            >
                              <div
                                className="pf-c-empty-state"
                                data-ouia-component-type="kogito-spinner"
                                data-ouia-safe={true}
                              >
                                <div
                                  className="pf-c-empty-state__content"
                                >
                                  <EmptyStateIcon
                                    component={[Function]}
                                    variant="container"
                                  >
                                    <div
                                      className="pf-c-empty-state__icon"
                                    >
                                      <Spinner>
                                        <span
                                          aria-valuetext="Loading..."
                                          className="pf-c-spinner pf-m-xl"
                                          role="progressbar"
                                        >
                                          <span
                                            className="pf-c-spinner__clipper"
                                          />
                                          <span
                                            className="pf-c-spinner__lead-ball"
                                          />
                                          <span
                                            className="pf-c-spinner__tail-ball"
                                          />
                                        </span>
                                      </Spinner>
                                    </div>
                                  </EmptyStateIcon>
                                  <Title
                                    headingLevel="h3"
                                    size="lg"
                                  >
                                    <h3
                                      className="pf-c-title pf-m-lg"
                                    >
                                      Loading details for task: 45a73767-5da3-49bf-9c40-d533c3e77ef3
                                    </h3>
                                  </Title>
                                </div>
                              </div>
                            </EmptyState>
                          </KogitoSpinner>
                        </div>
                      </Bullseye>
                    </article>
                  </Card>
                </div>
              </GridItem>
            </div>
          </Grid>
        </section>
      </PageSection>
    </TaskDetailsPage>
  </Router>
</MemoryRouter>
`;

exports[`TaskDetailsPage tests Normal State 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      "/",
    ]
  }
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <TaskDetailsPage
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [MockFunction],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": false,
          "params": Object {
            "taskId": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
          },
          "path": "",
          "url": "",
        }
      }
    >
      <PageSection
        data-ouia-component-id="spinner"
        data-ouia-component-type="task-details-page-section"
        data-ouia-safe={true}
      >
        <section
          className="pf-c-page__main-section"
          data-ouia-component-id="spinner"
          data-ouia-component-type="task-details-page-section"
          data-ouia-safe={true}
        >
          <Grid
            className="kogito-task-console__full-size"
            hasGutter={true}
            md={1}
          >
            <div
              className="pf-l-grid pf-m-all-1-col-on-md pf-m-gutter kogito-task-console__full-size"
            >
              <GridItem
                className="kogito-task-console__full-size"
                span={12}
              >
                <div
                  className="pf-l-grid__item pf-m-12-col kogito-task-console__full-size"
                >
                  <Card
                    className="kogito-task-console__full-size"
                  >
                    <article
                      className="pf-c-card kogito-task-console__full-size"
                      data-ouia-component-id="OUIA-Generated-Card-3"
                      data-ouia-component-type="PF4/Card"
                      data-ouia-safe={true}
                      id=""
                    >
                      <Bullseye>
                        <div
                          className="pf-l-bullseye"
                        >
                          <KogitoSpinner
                            spinnerText="Loading details for task: 45a73767-5da3-49bf-9c40-d533c3e77ef3"
                          >
                            <EmptyState
                              data-ouia-component-type="kogito-spinner"
                              data-ouia-safe={true}
                            >
                              <div
                                className="pf-c-empty-state"
                                data-ouia-component-type="kogito-spinner"
                                data-ouia-safe={true}
                              >
                                <div
                                  className="pf-c-empty-state__content"
                                >
                                  <EmptyStateIcon
                                    component={[Function]}
                                    variant="container"
                                  >
                                    <div
                                      className="pf-c-empty-state__icon"
                                    >
                                      <Spinner>
                                        <span
                                          aria-valuetext="Loading..."
                                          className="pf-c-spinner pf-m-xl"
                                          role="progressbar"
                                        >
                                          <span
                                            className="pf-c-spinner__clipper"
                                          />
                                          <span
                                            className="pf-c-spinner__lead-ball"
                                          />
                                          <span
                                            className="pf-c-spinner__tail-ball"
                                          />
                                        </span>
                                      </Spinner>
                                    </div>
                                  </EmptyStateIcon>
                                  <Title
                                    headingLevel="h3"
                                    size="lg"
                                  >
                                    <h3
                                      className="pf-c-title pf-m-lg"
                                    >
                                      Loading details for task: 45a73767-5da3-49bf-9c40-d533c3e77ef3
                                    </h3>
                                  </Title>
                                </div>
                              </div>
                            </EmptyState>
                          </KogitoSpinner>
                        </div>
                      </Bullseye>
                    </article>
                  </Card>
                </div>
              </GridItem>
            </div>
          </Grid>
        </section>
      </PageSection>
    </TaskDetailsPage>
  </Router>
</MemoryRouter>
`;

exports[`TaskDetailsPage tests Success notification 1`] = `
<TaskDetailsPage
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": false,
      "params": Object {
        "taskId": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      },
      "path": "",
      "url": "",
    }
  }
>
  <PageSection
    data-ouia-component-id="header"
    data-ouia-component-type="task-details-page-section"
    data-ouia-safe={true}
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
      data-ouia-component-id="header"
      data-ouia-component-type="task-details-page-section"
      data-ouia-safe={true}
    >
      <Breadcrumb>
        <MockedComponent />
      </Breadcrumb>
      <Flex
        justifyContent={
          Object {
            "default": "justifyContentSpaceBetween",
          }
        }
      >
        <div
          className="pf-l-flex pf-m-justify-content-space-between"
        >
          <FlexItem>
            <div
              className=""
            >
              <PageTitle
                extra={
                  <TaskState
                    task={
                      Object {
                        "actualOwner": null,
                        "adminGroups": Array [],
                        "adminUsers": Array [],
                        "completed": null,
                        "description": null,
                        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "excludedUsers": Array [],
                        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                        "lastUpdate": 2020-02-19T11:11:56.282Z,
                        "name": "VisaApplication",
                        "outputs": "{}",
                        "potentialGroups": Array [],
                        "potentialUsers": Array [],
                        "priority": "1",
                        "processId": "travels",
                        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                        "referenceName": "Apply for visa",
                        "rootProcessId": null,
                        "rootProcessInstanceId": null,
                        "started": 2020-02-19T11:11:56.282Z,
                        "state": "Ready",
                      }
                    }
                    variant="label"
                  />
                }
                title="Apply for visa"
              >
                <MockedComponent />
              </PageTitle>
            </div>
          </FlexItem>
          <FlexItem>
            <div
              className=""
            >
              <Button
                id="view-details"
                onClick={[Function]}
                variant="secondary"
              >
                <MockedComponent />
              </Button>
            </div>
          </FlexItem>
        </div>
      </Flex>
      <div
        className="kogito-task-console__task-details-page"
      >
        <MockedFormNotification
          notification={
            Object {
              "close": [Function],
              "customAction": Object {
                "label": "Go to Task Inbox",
                "onClick": [Function],
              },
              "details": undefined,
              "message": "Task 'Apply for visa' successfully transitioned to phase 'complete'.",
              "type": "success",
            }
          }
        />
      </div>
    </section>
  </PageSection>
  <PageSection
    data-ouia-component-id="content"
    data-ouia-component-type="task-details-page-section"
    data-ouia-safe={true}
  >
    <section
      className="pf-c-page__main-section"
      data-ouia-component-id="content"
      data-ouia-component-type="task-details-page-section"
      data-ouia-safe={true}
    >
      <Drawer
        isExpanded={false}
      >
        <div
          className="pf-c-drawer"
        >
          <DrawerContent
            panelContent={
              <DrawerPanelContent
                className="kogito-task-console__full-size"
              >
                <DrawerHead>
                  <span
                    tabIndex={-1}
                  >
                    <Title
                      headingLevel="h3"
                      size="xl"
                    >
                      Details
                    </Title>
                  </span>
                  <DrawerActions>
                    <DrawerCloseButton
                      onClick={[Function]}
                    />
                  </DrawerActions>
                </DrawerHead>
                <DrawerPanelBody>
                  <EmbeddedTaskDetails
                    targetOrigin="http://localhost"
                    userTask={
                      Object {
                        "actualOwner": null,
                        "adminGroups": Array [],
                        "adminUsers": Array [],
                        "completed": null,
                        "description": null,
                        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "excludedUsers": Array [],
                        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                        "lastUpdate": 2020-02-19T11:11:56.282Z,
                        "name": "VisaApplication",
                        "outputs": "{}",
                        "potentialGroups": Array [],
                        "potentialUsers": Array [],
                        "priority": "1",
                        "processId": "travels",
                        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                        "referenceName": "Apply for visa",
                        "rootProcessId": null,
                        "rootProcessInstanceId": null,
                        "started": 2020-02-19T11:11:56.282Z,
                        "state": "Ready",
                      }
                    }
                  />
                </DrawerPanelBody>
              </DrawerPanelContent>
            }
          >
            <DrawerMain>
              <div
                className="pf-c-drawer__main"
              >
                <div
                  className="pf-c-drawer__content"
                >
                  <DrawerContentBody>
                    <div
                      className="pf-c-drawer__body"
                    >
                      <Grid
                        className="kogito-task-console__full-size"
                        hasGutter={true}
                        md={1}
                      >
                        <div
                          className="pf-l-grid pf-m-all-1-col-on-md pf-m-gutter kogito-task-console__full-size"
                        >
                          <GridItem
                            className="kogito-task-console__full-size"
                            span={12}
                          >
                            <div
                              className="pf-l-grid__item pf-m-12-col kogito-task-console__full-size"
                            >
                              <Card
                                className="kogito-task-console__full-size"
                              >
                                <article
                                  className="pf-c-card kogito-task-console__full-size"
                                  data-ouia-component-id="OUIA-Generated-Card-6"
                                  data-ouia-component-type="PF4/Card"
                                  data-ouia-safe={true}
                                  id=""
                                >
                                  <CardBody
                                    className="pf-u-h-100"
                                  >
                                    <div
                                      className="pf-c-card__body pf-u-h-100"
                                    >
                                      <MockedTaskFormContainer
                                        onSubmitError={[Function]}
                                        onSubmitSuccess={[Function]}
                                        userTask={
                                          Object {
                                            "actualOwner": null,
                                            "adminGroups": Array [],
                                            "adminUsers": Array [],
                                            "completed": null,
                                            "description": null,
                                            "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                                            "excludedUsers": Array [],
                                            "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                                            "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                                            "lastUpdate": 2020-02-19T11:11:56.282Z,
                                            "name": "VisaApplication",
                                            "outputs": "{}",
                                            "potentialGroups": Array [],
                                            "potentialUsers": Array [],
                                            "priority": "1",
                                            "processId": "travels",
                                            "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                                            "referenceName": "Apply for visa",
                                            "rootProcessId": null,
                                            "rootProcessInstanceId": null,
                                            "started": 2020-02-19T11:11:56.282Z,
                                            "state": "Ready",
                                          }
                                        }
                                      />
                                    </div>
                                  </CardBody>
                                </article>
                              </Card>
                            </div>
                          </GridItem>
                        </div>
                      </Grid>
                    </div>
                  </DrawerContentBody>
                </div>
                <DrawerPanelContent
                  className="kogito-task-console__full-size"
                >
                  <div
                    className="pf-c-drawer__panel kogito-task-console__full-size"
                    hidden={true}
                    onTransitionEnd={[Function]}
                  />
                </DrawerPanelContent>
              </div>
            </DrawerMain>
          </DrawerContent>
        </div>
      </Drawer>
    </section>
  </PageSection>
</TaskDetailsPage>
`;

exports[`TaskDetailsPage tests Success notification 2`] = `
<TaskDetailsPage
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [MockFunction],
      "replace": [Function],
    }
  }
  location={
    Object {
      "hash": "",
      "pathname": "/",
      "search": "",
      "state": undefined,
    }
  }
  match={
    Object {
      "isExact": false,
      "params": Object {
        "taskId": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
      },
      "path": "",
      "url": "",
    }
  }
>
  <PageSection
    data-ouia-component-id="header"
    data-ouia-component-type="task-details-page-section"
    data-ouia-safe={true}
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
      data-ouia-component-id="header"
      data-ouia-component-type="task-details-page-section"
      data-ouia-safe={true}
    >
      <Breadcrumb>
        <MockedComponent />
      </Breadcrumb>
      <Flex
        justifyContent={
          Object {
            "default": "justifyContentSpaceBetween",
          }
        }
      >
        <div
          className="pf-l-flex pf-m-justify-content-space-between"
        >
          <FlexItem>
            <div
              className=""
            >
              <PageTitle
                extra={
                  <TaskState
                    task={
                      Object {
                        "actualOwner": null,
                        "adminGroups": Array [],
                        "adminUsers": Array [],
                        "completed": null,
                        "description": null,
                        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "excludedUsers": Array [],
                        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                        "lastUpdate": 2020-02-19T11:11:56.282Z,
                        "name": "VisaApplication",
                        "outputs": "{}",
                        "potentialGroups": Array [],
                        "potentialUsers": Array [],
                        "priority": "1",
                        "processId": "travels",
                        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                        "referenceName": "Apply for visa",
                        "rootProcessId": null,
                        "rootProcessInstanceId": null,
                        "started": 2020-02-19T11:11:56.282Z,
                        "state": "Ready",
                      }
                    }
                    variant="label"
                  />
                }
                title="Apply for visa"
              >
                <MockedComponent />
              </PageTitle>
            </div>
          </FlexItem>
          <FlexItem>
            <div
              className=""
            >
              <Button
                id="view-details"
                onClick={[Function]}
                variant="secondary"
              >
                <MockedComponent />
              </Button>
            </div>
          </FlexItem>
        </div>
      </Flex>
    </section>
  </PageSection>
  <PageSection
    data-ouia-component-id="content"
    data-ouia-component-type="task-details-page-section"
    data-ouia-safe={true}
  >
    <section
      className="pf-c-page__main-section"
      data-ouia-component-id="content"
      data-ouia-component-type="task-details-page-section"
      data-ouia-safe={true}
    >
      <Drawer
        isExpanded={false}
      >
        <div
          className="pf-c-drawer"
        >
          <DrawerContent
            panelContent={
              <DrawerPanelContent
                className="kogito-task-console__full-size"
              >
                <DrawerHead>
                  <span
                    tabIndex={-1}
                  >
                    <Title
                      headingLevel="h3"
                      size="xl"
                    >
                      Details
                    </Title>
                  </span>
                  <DrawerActions>
                    <DrawerCloseButton
                      onClick={[Function]}
                    />
                  </DrawerActions>
                </DrawerHead>
                <DrawerPanelBody>
                  <EmbeddedTaskDetails
                    targetOrigin="http://localhost"
                    userTask={
                      Object {
                        "actualOwner": null,
                        "adminGroups": Array [],
                        "adminUsers": Array [],
                        "completed": null,
                        "description": null,
                        "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "excludedUsers": Array [],
                        "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                        "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                        "lastUpdate": 2020-02-19T11:11:56.282Z,
                        "name": "VisaApplication",
                        "outputs": "{}",
                        "potentialGroups": Array [],
                        "potentialUsers": Array [],
                        "priority": "1",
                        "processId": "travels",
                        "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                        "referenceName": "Apply for visa",
                        "rootProcessId": null,
                        "rootProcessInstanceId": null,
                        "started": 2020-02-19T11:11:56.282Z,
                        "state": "Ready",
                      }
                    }
                  />
                </DrawerPanelBody>
              </DrawerPanelContent>
            }
          >
            <DrawerMain>
              <div
                className="pf-c-drawer__main"
              >
                <div
                  className="pf-c-drawer__content"
                >
                  <DrawerContentBody>
                    <div
                      className="pf-c-drawer__body"
                    >
                      <Grid
                        className="kogito-task-console__full-size"
                        hasGutter={true}
                        md={1}
                      >
                        <div
                          className="pf-l-grid pf-m-all-1-col-on-md pf-m-gutter kogito-task-console__full-size"
                        >
                          <GridItem
                            className="kogito-task-console__full-size"
                            span={12}
                          >
                            <div
                              className="pf-l-grid__item pf-m-12-col kogito-task-console__full-size"
                            >
                              <Card
                                className="kogito-task-console__full-size"
                              >
                                <article
                                  className="pf-c-card kogito-task-console__full-size"
                                  data-ouia-component-id="OUIA-Generated-Card-6"
                                  data-ouia-component-type="PF4/Card"
                                  data-ouia-safe={true}
                                  id=""
                                >
                                  <CardBody
                                    className="pf-u-h-100"
                                  >
                                    <div
                                      className="pf-c-card__body pf-u-h-100"
                                    >
                                      <MockedTaskFormContainer
                                        onSubmitError={[Function]}
                                        onSubmitSuccess={[Function]}
                                        userTask={
                                          Object {
                                            "actualOwner": null,
                                            "adminGroups": Array [],
                                            "adminUsers": Array [],
                                            "completed": null,
                                            "description": null,
                                            "endpoint": "http://localhost:8080/travels/9ae7ce3b-d49c-4f35-b843-8ac3d22fa427/VisaApplication/45a73767-5da3-49bf-9c40-d533c3e77ef3",
                                            "excludedUsers": Array [],
                                            "id": "45a73767-5da3-49bf-9c40-d533c3e77ef3",
                                            "inputs": "{\\"Skippable\\":\\"true\\",\\"trip\\":{\\"city\\":\\"Boston\\",\\"country\\":\\"US\\",\\"begin\\":\\"2020-02-19T23:00:00.000+01:00\\",\\"end\\":\\"2020-02-26T23:00:00.000+01:00\\",\\"visaRequired\\":true},\\"TaskName\\":\\"VisaApplication\\",\\"NodeName\\":\\"Apply for visa\\",\\"traveller\\":{\\"firstName\\":\\"Rachel\\",\\"lastName\\":\\"White\\",\\"email\\":\\"rwhite@gorle.com\\",\\"nationality\\":\\"Polish\\",\\"address\\":{\\"street\\":\\"Cabalone\\",\\"city\\":\\"Zerf\\",\\"zipCode\\":\\"765756\\",\\"country\\":\\"Poland\\"}},\\"Priority\\":\\"1\\"}",
                                            "lastUpdate": 2020-02-19T11:11:56.282Z,
                                            "name": "VisaApplication",
                                            "outputs": "{}",
                                            "potentialGroups": Array [],
                                            "potentialUsers": Array [],
                                            "priority": "1",
                                            "processId": "travels",
                                            "processInstanceId": "9ae7ce3b-d49c-4f35-b843-8ac3d22fa427",
                                            "referenceName": "Apply for visa",
                                            "rootProcessId": null,
                                            "rootProcessInstanceId": null,
                                            "started": 2020-02-19T11:11:56.282Z,
                                            "state": "Ready",
                                          }
                                        }
                                      />
                                    </div>
                                  </CardBody>
                                </article>
                              </Card>
                            </div>
                          </GridItem>
                        </div>
                      </Grid>
                    </div>
                  </DrawerContentBody>
                </div>
                <DrawerPanelContent
                  className="kogito-task-console__full-size"
                >
                  <div
                    className="pf-c-drawer__panel kogito-task-console__full-size"
                    hidden={true}
                    onTransitionEnd={[Function]}
                  />
                </DrawerPanelContent>
              </div>
            </DrawerMain>
          </DrawerContent>
        </div>
      </Drawer>
    </section>
  </PageSection>
</TaskDetailsPage>
`;
